2014-03-20: Gisle Hannemyr <gisle@hannemyr.no>
- #2221675: Added views integration submodule.

2014-03-15: Gisle Hannemyr <gisle@hannemyr.no>
- #2182323 Fixed bug: Sending hour is not respected.
- Cleaned up bundle filtering, status reporting, added advanced help.
- Release: 7.x-1.0-alpha6

2014-02-10: Gisle Hannemyr <gisle@hannemyr.no>
- Release: 7.x-1.0-alpha5

2014-02-09: Gisle Hannemyr <gisle@hannemyr.no>
- Release: 7.x-1.0-alpha4

2013-11-25: Gisle Hannemyr <gisle@hannemyr.no>
- Made admin queue a separate permission.

2013-11-06: Gisle Hannemyr <gisle@hannemyr.no>
- Corrected count of emails sent.

2013-11-01: Gisle Hannemyr <gisle@hannemyr.no>
- #2099241: Fixed problem with restart from beginning on error.

2013-10-24: Gisle Hannemyr <gisle@hannemyr.no>
- Added option to truncate notification queue.

2013-09-30: Gisle Hannemyr <gisle@hannemyr.no>
- Added sanity check to settings page.
- Removed meaningless options from period menu.

2013-09-10: Gisle Hannemyr <gisle@hannemyr.no>
- #2083875 by interactivejunky: Remove Notify of new comments option
  when comment module is disabled.
- by gisle: Corrected a trivial typo in a string.

2013-08-25:  Gisle Hannemyr <gisle@hannemyr.no>
-  Removed some redundant newlines for nicer messages.

2013-08-24: Gisle Hannemyr <gisle@hannemyr.no>
- Fixed up README.txt to match that of the 6.x-branch..

2013-06-29: Gisle Hannemyr <gisle@hannemyr.no>
- Allow access to notification settings for blocked users.

2013-05-13: Gisle Hannemyr <gisle@hannemyr.no>
- #1992788 by mark.lindsey: Deleted comments are deleted from queue.

2013-05-12: Gisle Hannemyr <gisle@hannemyr.no>
- #1992788 by mark.lindsey: Users Are Notified About New Unpublished
  Comments.

2013-01-13: Gisle Hannemyr <gisle@hannemyr.no>
- #92206 by gisle: Made the purpose of default checkbox clearer.
- changed "email" to "e-mail" (as used by the core).
- Deleted undefined variable $name in notify_uninstall().
- Throws an error if flushing e-mail queue with no users.