@@ -46,8 +46,9 @@ registration.  Note that this setting has no effect unless you grant
 the anonymous user the right to access notify.</p>
 
 <p>The final section under the <strong>Settings</strong> tab let you
-set up notification by node type.  Having nothing checked defaults to
-sending notifications about all node types.</p>
+set up notification subscriptions by node type.  Having nothing
+checked defaults to making all content types available for
+subscription.</p>
 
 <p>The <strong>Queue</strong> tab is to process and inspect the notification queue.</p>
 
